--- a/src/app/quiz-maker-category-type/quiz-maker-category-type.component.scss
+++ b/src/app/quiz-maker-category-type/quiz-maker-category-type.component.scss
@@ -7,10 +7,10 @@
 .mt-top {
   margin-top: 100px;
 }
-.wd-area {
-  width: 600px;
+.wd {
+  width: 500px;
 }
-.txt_align {
+.txt_alignment {
   text-align: center;
 }
 .ques_txt {
