--- a/src/app/quiz-maker-category-type/quiz-maker-category-type.component.html
+++ b/src/app/quiz-maker-category-type/quiz-maker-category-type.component.html
@@ -8,7 +8,7 @@
         [(ngModel)]="selectedCategory"
         placeholder="Select a category"
         optionLabel="name"
-        (onChange)="selectCategoryId($event.value.id)"
+        (onChange)="selectCategoryTypeId($event.value.id)"
       ></p-dropdown>
 
       <p-dropdown
@@ -17,7 +17,7 @@
         [(ngModel)]="selectedDiffculty"
         placeholder="Select difficulty"
         optionLabel="name"
-        (onChange)="selecteDifficultyId($event.value.name)"
+        (onChange)="selecteDifficultyLevelId($event.value.name)"
       ></p-dropdown>
 
       <p-button
@@ -30,7 +30,7 @@
     </div>
   </div>
   <div>
-    <div class="grid" *ngFor="let ques of optedQuestions; let i = index">
+    <div class="grid" *ngFor="let ques of questionAnswers; let i = index">
       <div class="col-12">
         <p [innerHTML]="ques.question"></p>
       </div>
@@ -43,7 +43,7 @@
           pRipple
           class="p-button-outlined"
           id="bt_{{ i + '_' + j }}"
-          (click)="clickButton(btns, i, j)"
+          (click)="buttonSelected(btns, i, j)"
         >
           <p [innerHTML]="btns"></p>
         </button>
@@ -57,7 +57,7 @@
         pButton
         pRipple
         label="Submit"
-        (click)="submitButton()"
+        (click)="clickSubmit()"
       ></button>
     </div>
   </div>
