--- a/src/app/quiz-maker-result-page/quiz-maker-result-page.component.html
+++ b/src/app/quiz-maker-result-page/quiz-maker-result-page.component.html
@@ -51,7 +51,7 @@
         label="Large"
         pButton
         pRipple
-        (click)="createNewQuiz()"
+        (click)="newQuizClicked()"
         class="lst_quiz_btn"
         label="Create a new quiz"
         id="Btn_quiz"
