--- a/src/app/quiz-maker-result-page/quiz-maker-result-page.component.scss
+++ b/src/app/quiz-maker-result-page/quiz-maker-result-page.component.scss
@@ -11,29 +11,7 @@
 .yelow {
   background-color: yellow;
 }
-.ques-text {
-  /*width: 100%;
-  margin-top: 7%;*/
-}
-.score-text {
-  /* width: 50%;
-  margin-top: 82px;
-  text-align: center;
-  margin-left: 20%;*/
-}
-.incorr-text {
-  /*float: left;
-  margin-left: 20px;*/
-}
-.first_txt {
-  /*margin-top: 20px;
-  margin-left: 14%;*/
-}
 .lst_quiz_btn {
-  /* width: 74%;
-  height: 40px;
-  background-color: gray;
-  color: white;*/
   background-color: gray;
   color: white;
 }
@@ -42,7 +20,7 @@
   background-color: gray;
   color: white;
 }
-.txt_align {
+.txt_alignment {
   text-align: center;
 }
 .quiz_txt {
